# hackathon-leap-midi-controller

./: .gitignore  CMakeLists.txt  CMakePresets.json  HandUI.hpp  InteractionState.cpp  InteractionState.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TestSynthSound.h  TestSynthVoice.cpp  TestSynthVoice.h
LeapWrapper/: CMakeLists.txt  LeapTracker.cpp  LeapTracker.h
dependencies/LeapSDK/include/: LeapC.h
dependencies/LeapSDK/lib/cmake/LeapSDK/: leapsdk-config.cmake  leapsdk-configVersion.cmake
tracker/: CMakeLists.txt  tracker.cpp  tracker.h
